# iomete_mongodb_sync

./: .dockerignore  .gitignore  Makefile  application.conf  docker-compose.yaml  driver.py  readme.md  setup.cfg
docker/: Dockerfile
iomete_mongodb_sync/: __init__.py  config.py  logger.py  main.py  mongo_db_sync.py  mono_db_sync.py  utils.py
tests/: __init__.py  _spark_session.py  config_test.py  test_iomete_mongodb_sync.py
