[metadata]
name = iomete_mongodb_sync
version = 0.1.0
author = Vusal D.
author_email = vusal@iomete.com
description = iomete mongodb sync
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = iomete_mongodb_sync
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = iomete_mongodb_sync
install_requires =
    pyhocon~=0.3.59
    setuptools~=60.2.0

[options.extras_require]
dev =
    pyspark==3.1.3
    pytest==7.1.2
